# sdk-rust-public

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  TODO.md  install-hooks.ps1  install-hooks.sh  precommit.ps1  precommit.sh
.github/: RELEASE_TEMPLATE.md  release.yml
.github/workflows/: ci.yml  release.yml
examples/: platform_api.rs
include/: lattix_sdk.h
src/: builder.rs  client.rs  error.rs  ffi.rs  lib.rs  models.rs
tests/: client.rs  ffi_smoke.rs
